manifests/workshop/apps/random-team-generator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: random-team-generator-ingress
  namespace: random-team-generator
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: frontend
            port:
              number: 80
        path: /
        pathType: Prefix
